--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -131,6 +131,36 @@
 
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
 
+			<h2 class="section-title section-title--small">Notre groupe jazz manouche en vidéo</h2>
+
+			<div class="row">
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pmZ80dJklu0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
 			<span id="formules"></span>
 
 			<h2 class="section-title section-title--small">Nos groupes de jazz manouche pour vos événements</h2>
@@ -245,6 +275,21 @@
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pmZ80dJklu0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h3 class="section-title section-title--smaller" style="margin-top: 25px;">Trio jazz avec chanteur</h3>
+
+			<p>
+				Dans un esprit plus "jazz", une formule avec chanteur permet de revivre les années 30 de manière encore plus conviviale !
+				Vidéo réalisée lors d'une prestation avec <a href="https://www.swingcocktail.com/" target="_blank">Swing Cocktail</a>.
+			</p>
+
+			<div class="row">
+				<div class="col-md-12">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RfHo4ztPXhY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
