--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -279,7 +279,7 @@
 				</div>
 			</div>
 
-			<h3 class="section-title section-title--smaller" style="margin-top: 25px;">Trio jazz avec chanteur</h3>
+			<!--<h3 class="section-title section-title--smaller" style="margin-top: 25px;">Trio jazz avec chanteur</h3>
 
 			<p>
 				Dans un esprit plus "jazz", une formule avec chanteur permet de revivre les années 30 de manière encore plus conviviale !
@@ -292,7 +292,7 @@
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RfHo4ztPXhY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
-			</div>
+			</div>-->
 
             <h3 class="section-title section-title--smaller" style="margin-top: 15px;">Quartet et plus</h3>
 
