--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -25,11 +25,15 @@
 			</h1>
 
 			<p>
-                Vous recherchez un <strong>groupe de jazz manouche</strong> pour <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">votre mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (duo, trio, quartet, ...), toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
+				<a href="{{ path('contact') }}" class="btn btn-primary">Contactez nous pour un devis gratuit</a>
 			</p>
 
 			<p>
-				Nous nous produisons aussi bien lors de concerts en public, que lors d'<strong>événements d'entreprise et soirées privées</strong> ; les vidéos que vous verrez ci-dessous sont captées pour la plupart lors de concerts, mais vous pouvez consulter <a href="#reviews">nos avis</a> qui eux parlent plutôt de nos animations musicales.
+                Vous recherchez un <strong>groupe de jazz manouche</strong> pour votre soirée privée, <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (duo, trio, quartet, ...), toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
+			</p>
+
+			<p>
+				Nous nous produisons aussi bien lors de concerts en public, que lors d'<strong>événements d'entreprise et soirées privées</strong>. Vous trouverez sur cette page de nombreuses vidéos de notre groupe jazz manouche, ainsi que <a href="#reviews">des avis</a> qui décrivent la qualité de nos animations musicales.
 			</p>
 
 			<!--<div class="row">
