--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Musiciens pour vos événements - Mariage - Soirée - Cocktail
+	Animation musicale pour vos événements - Soirée - Cocktail
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez un groupe de musiciens pour votre événement (mariage, soirée, cocktail) ? Groupe jazz manouche, duos chanson, ... déplacements dans toute la France !">
+	<meta name="description" content="Vous cherchez une animation musicale pour votre événement (mariage, soirée, cocktail) ? Groupe jazz manouche, duos chanson, ... déplacements dans toute la France !">
 {% endblock %}
 
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/accordeoniste-soirees-evenements.jpg" alt="Accordéoniste et musiciens pour événements (soirées, mariages, cocktails)" class="flash-item__background flash-item__background--groupes" style="top: -30%">
+			<img src="img/manouchebg.jpg" alt="Accordéoniste et musiciens pour événements (soirées, mariages, cocktails)" class="flash-item__background flash-item__background--groupes" style="top: -30%">
 
 			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews reviews-flash"></div>
+
 		</div>
 	</section>
 
@@ -25,7 +25,7 @@
 			<h1 class="section-title">Événementiel et animations musicales</h1>
 
 			<p>
-				Accordéoniste professionnel, Jérémy Dutheil vous propose des formules sur mesures pour <strong>l'animation musicale</strong> de votre  événement : cocktail, fête, vin d'honneur, soirée d'entreprise. Seul ou accompagné d'autres <strong>musiciens</strong>, dans un style plutôt moderne ou <strong>rétro</strong>, il saura combler vos invités en s'adaptant à leurs envies (et les votres !). Musicien professionnel avec de l'expérience, le répertoire proposé est varié et personnalisé pour votre événement. Jérémy évolue plus particulièrement dans les styles musicaux <strong>jazz</strong> (manouche) et <strong>chanson française</strong>.
+				Accordéoniste professionnel, Jérémy Dutheil vous propose des formules sur mesures pour <strong>l'animation musicale</strong> de votre  événement : cocktail, fête, vin d'honneur, <a href="{{ path('entreprise') }}">soirée d'entreprise</a>. Seul ou accompagné d'autres <strong>musiciens</strong>, dans un style plutôt moderne ou <strong>rétro</strong>, il saura combler vos invités en s'adaptant à leurs envies (et les votres !). Musicien professionnel avec de l'expérience, le répertoire proposé est varié et personnalisé pour votre événement. Jérémy évolue plus particulièrement dans les styles musicaux <strong>jazz</strong> (manouche) et <strong>chanson française</strong>.
 			</p>
 
 			<p>
