--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,7 +9,7 @@
 			<p class="flash-item__content-title">Musicien <br>pour vos événements</p>
 
 			<p class="flash-item__content-text">
-				Vous cherchez un accordéoniste pour un mariage, un anniversaire, <br>une soirée d'entreprise ou une animation seniors à Paris, Ile de France ou dans toute la France ?
+				Vous cherchez un accordéoniste pour un mariage, un anniversaire, <br><a href="{{ path('entreprise') }}">une soirée d'entreprise</a> ou une animation seniors à Paris, Ile de France ou dans toute la France ?
 			</p>
 
 			<a href="{{ path('animations') }}" class="btn btn-secondary flash-item__content-btn">Découvrir les formules <span class="d-none d-md-inline">d'animations musicales</span></a>
@@ -117,7 +117,7 @@
 						<h2 class="section-title section-title--blank">Mariage, soirée, cocktail . . .</h2>
 
 						<p class="txt--blank">
-							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong>. Fort d'une expérience certaine, je propose un répertoire varié qui plaira à tout type de public, comme en attestent les nombreux avis positifs. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de l'ambiance attendue pour votre soirée. Seul ou accompagné (guitariste, contrebassiste, ...), je me plairai à jouer des standards de jazz et <a href="{{ path('manouche') }}">jazz manouche</a> lors d'un repas en musique ou au vin d'honneur de <a href="{{ path('animations_mariages') }}">votre mariage</a>. Très à la mode actuellement, je propose également des <a href="{{ path('guinguette') }}">soirées guinguettes</a> en solo ou avec chanteuse, autour de la chanson française d'époque.
+							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong>. Fort d'une expérience certaine, je propose un répertoire varié qui plaira à tout type de public, comme en attestent les nombreux avis positifs. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de l'ambiance attendue pour votre soirée. Seul ou accompagné (guitariste, contrebassiste, ...), je me plairai à jouer des standards de jazz et <a href="{{ path('manouche') }}">jazz manouche</a> lors d'une <a href="{{ path('entreprise') }}">soirée d'entreprise</a>, d'un repas en musique ou au vin d'honneur de <a href="{{ path('animations_mariages') }}">votre mariage</a>. Très à la mode actuellement, je propose également des <a href="{{ path('guinguette') }}">soirées guinguettes</a> en solo ou avec chanteuse, autour de la chanson française d'époque.
 						</p>
 
 						<p class="txt--blank">
