--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -59,19 +59,15 @@ drift.load('beeybihz4kn4');
 			<div class="row">
 				<div class="col-md-6">
 					<p>
-						Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? <a href="{{ path('animations_mariages') }}">Mariage</a>, fête entre amis sur le <a href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire, cocktail d'entreprise.. Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation d'accueillir un <strong>groupe de musique</strong> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
+						Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? <a href="{{ path('animations_mariages') }}">Mariage</a>, fête entre amis sur le <a href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire, cocktail d'entreprise.. Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation de réserver un <strong>groupe de musique</strong> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
 					</p>
 
 					<p>
-						Pourquoi alors ne pas choisir d'accueillir un <strong>accordéoniste en solo</strong> ? L'accordéon est en effet un instrument riche et complet, tout à fait adapté pour l'animation de votre soirée ; grâce à mes années de pratique, j'ai pu développer un répertoire dense et varié, qui me permet de vous proposer une belle palette de <strong>styles musicaux</strong>. Des standards de jazz à la chanson française, en passant par la musique brésilienne ou le tango argentin, il y en aura pour tous les goûts !
+						Pourquoi alors ne pas choisir d'accueillir un <strong>accordéoniste en solo</strong> ? L'accordéon est en effet un instrument riche et complet, tout à fait adapté pour l'animation musicale de votre soirée. Grâce à mes années de pratique, j'ai pu développer un répertoire dense et varié, qui me permet de vous proposer aujourd'hui une belle palette de <strong>styles musicaux</strong>. Des standards de jazz à la chanson française, en passant par la musique brésilienne ou le tango argentin, il y en aura pour tous les goûts !
 					</p>
 
 					<p>
-						Avec une formule en solo, l'organisation de votre événement est grandement simplifiée ; les conditions techniques sont réduites au minimum, et il n'y a pas besoin de sonorisation la plupart du temps. Si cela s'avère nécessaire, je suis autonome et possède mon propre matériel de diffusion. L'espace nécessaire se résume à une chaise, qui peut se déplacer au cours de la soirée afin d'animer différents espaces..
-					</p>
-
-					<p>
-						Si vous souhaitez une formule plus complète, je vous propose de voir notre <a href="{{ path('manouche') }}">groupe de jazz manouche</a> (du duo au quartet).
+						Avec une formule en solo, l'organisation de votre événement est grandement simplifiée ; les conditions techniques sont réduites au minimum, et il n'y a pas besoin de sonorisation la plupart du temps. Si cela s'avère nécessaire, je suis autonome et possède mon propre matériel de diffusion. L'espace nécessaire se résume à une chaise, qui peut se déplacer au cours de la soirée afin d'animer différents espaces.. (<i>Attention, je joue uniquement assis et ne propose donc pas de déambulation à proprement parler.</i>)
 					</p>
 				</div>
 
@@ -80,6 +76,14 @@ drift.load('beeybihz4kn4');
 
 					<p style="margin-top: 15px;">
 						<a href="{{ path('contact') }}" class="btn btn-primary">Une question ? Un devis ? Contactez-moi !</a>
+					</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-12">
+					<p>
+						Si vous cherchez une formation musicale plus fournie, je vous propose de regarder notre <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, avec lequel nous proposons des formules du duo (accordéon / guitare) au quartet (accordéon / 2 guitares / contrebasse).
 					</p>
 				</div>
 			</div>
@@ -97,7 +101,7 @@ drift.load('beeybihz4kn4');
 			<h3 class="section-title section-title--smaller">Accordéon jazz : classe et élégance</h3>
 
 			<p>
-				Si vous êtes à la recherche d'une musique d'ambiance pendant votre soirée, l'accordéon est sans aucun doute l'instrument idéal ! Moins coûteux à déplacer qu'un piano, plus original et pourtant tout aussi intéressant. Au son des standards de <i>jazz</i>, de Duke Ellington à Charlie Parker, laissez vous séduire par un son feutré et tout en retenue.
+				Vous cherchez un accordéoniste qui sortira des sentiers battus, proposant une musique chic et raffinée. Pour une musique d'ambiance lors de votre soirée, le jazz à l'accordéon est un choix idéal ! Moins coûteux à déplacer qu'un piano, plus original et pourtant tout aussi intéressant. Au son des standards de <i>jazz</i>, de Duke Ellington à Charlie Parker, laissez vous séduire par un son feutré et tout en retenue.
 			</p>
 
 			<p>
@@ -105,10 +109,58 @@ drift.load('beeybihz4kn4');
 			</p>
 
 			<div class="row justify-content-center" style="margin-bottom: 20px;">
-				<div class="col-sm-6">
+				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
+				</div>
+
+				<div class="col-md-6">
+					<p>
+						<strong>Accordéon Jazz - Quelques titres pour l'exemple</strong>
+					</p>
+
+					<ul>
+						<li>
+							Stella by Starlight
+						</li>
+
+						<li>
+							All of Me
+						</li>
+
+						<li>
+							How high the Moon
+						</li>
+
+						<li>
+							Billie's Bounce
+						</li>
+
+						<li>
+							Autumn Leaves
+						</li>
+
+						<li>
+							Body and Soul
+						</li>
+
+						<li>
+							There will never be another you
+						</li>
+
+						<li>
+							On the sunny side of the street
+						</li>
+
+						<li>
+							Saint James Infirmary
+						</li>
+
+						<li>
+							All the things you are
+						</li>
+					</ul>
 				</div>
 			</div>
 
@@ -126,7 +178,63 @@ drift.load('beeybihz4kn4');
 			</p>
 
 			<div class="row justify-content-center" style="margin-bottom: 20px;">
-				<div class="col-sm-6">
+				<div class="col-md-6">
+					<p>
+						<strong>Accordéon guinguette : quelques titres pour l'exemple</strong>
+					</p>
+
+					<ul>
+						<li>
+							Le balajo
+						</li>
+
+						<li>
+							Indifférence
+						</li>
+
+						<li>
+							Champs Elysées
+						</li>
+
+						<li>
+							La Foule
+						</li>
+
+						<li>
+							La bohème
+						</li>
+
+						<li>
+							Ménilmontant
+						</li>
+
+						<li>
+							Que reste t'il de nos amours
+						</li>
+
+						<li>
+							La vie en rose
+						</li>
+
+						<li>
+							Emmenez-moi
+						</li>
+
+						<li>
+							Minor Swing
+						</li>
+
+						<li>
+							Un mauvais garçon
+						</li>
+
+						<li>
+							Un clair de lune à Maubeuge
+						</li>
+					</ul>
+				</div>
+
+				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2ikPP4jTAfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
@@ -148,6 +256,10 @@ drift.load('beeybihz4kn4');
 			</div>
 
 			<h3 class="section-title section-title--smaller">Un exemple de répertoire à l'accordéon pour votre soirée</h3>
+
+			<p>
+				Vous êtes à la recherche d'un accordéoniste, voici quelques titres auxquels vous pouvez vous attendre lors de votre soirée :
+			</p>
 
 			<div class="row">
 				<div class="col-sm-6">
@@ -207,18 +319,7 @@ drift.load('beeybihz4kn4');
 				</div>
 			</div>
 
-
-			<h2 class="section-title section-title--small" style="margin-top: 25px;">Prestation sur mesure pour votre soirée</h2>
-
-			<p>
-				Loin d'être des formules immuables, les différentes propositions affichées sur cette page sont des exemples d'animations musicales et d'orientations possibles pour votre soirée avec l'accordéon. En tant que musicien professionnel, je m'adapte à vos envies tout en vous conseillant au mieux possible ; notre but est le même, faire de votre soirée un moment d'exception !
-			</p>
-
-			<p>
-				Pour démarrer une première discussion et obtenir plus de renseignements, n'hésitez pas à me contacter ; vous pouvez également consulter la page des <a href="{{ path('animations') }}">animations musicales</a> pour découvrir d'autres possibilités (notamment avec un <a href="{{ path('manouche') }}">groupe de jazz manouche</a>).
-			</p>
-
-			<h2 class="section-title section-title--small">Ils m'ont fait confiance</h2>
+			<h2 class="section-title section-title--small" style="margin-top: 25px;">Ils m'ont fait confiance</h2>
 
 			<div class="partners">
 				<img src="{{ asset('img/vinci.png') }}" alt="Vinci" style="max-height: 100px; margin-right: 25px;">
@@ -238,6 +339,37 @@ drift.load('beeybihz4kn4');
 			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews"></div>
 
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
+			<h2 class="section-title section-title--small" style="margin-top: 25px;">Prestation sur mesure pour votre soirée</h2>
+
+			<p>
+				Loin d'être des formules immuables, les différentes propositions affichées sur cette page sont des exemples d'animations musicales et d'orientations possibles pour votre soirée avec l'accordéon. En tant que musicien professionnel, je m'adapte à vos envies tout en vous conseillant au mieux possible ; notre but est le même, faire de votre soirée un moment d'exception !
+			</p>
+
+			<p>
+				Pour démarrer une première discussion et obtenir plus de renseignements, n'hésitez pas à me contacter ; vous pouvez également consulter la page des <a href="{{ path('animations') }}">animations musicales</a> pour découvrir d'autres possibilités (notamment avec un <a href="{{ path('manouche') }}">groupe de jazz manouche</a>).
+			</p>
+
+			<h2 class="section-title section-title--small" style="margin-top: 25px;">Quelques exemples de propositions</h2>
+
+			<p>
+				<strong>* Je cherche un accordéoniste pour un dîner d'entreprise à Paris, ambiance repas d'affaire.</strong> <br>
+				Dans ce cadre, je vous proposerais de partir sur la formule <i>accordéon jazz</i> ; entre 2 et 4h de prestation, plutôt calme et discret. La musique est présente pour l'ambiance, mais laisse tout de même place aux discussions des invités. Dans ce cadre, notre duo accordéon / guitare pourrait également tout à fait convenir, tout en restant abordable.
+			</p>
+
+			<p>
+				<strong>* Nous organisons une fête entre amis, et sommes à la recherche d'un accordéoniste pour le début de soirée.</strong> <br>
+				Ici, l'accordéon se fait plus présent et invite au chant ou à la danse ; ambiance guinguette avec de la chanson française (instrumentale), mais aussi quelques standards de swing et jazz manouche. Je peux également venir accompagné d'une chanteuse pour ce type d'événements.
+			</p>
+
+			<p>
+				<strong>* Mon entreprise organise un cocktail sur un thème "guinguette", et je cherche un accordéoniste pour l'animation musicale.</strong> <br>
+				Lors d'un cocktail d'entreprise, je préconise un mélange des genres : quelques airs de chanson française connus (instrumental à l'accordéon), mais également du jazz et swing qui donneront une touche très classe. Ambiance années 50 garantie !
+			</p>
+
+			<p>
+				<a href="{{ path('contact') }}" class="btn btn-primary">Parlez moi de votre propre projet !</a>
+			</p>
 		</div>
 	</section>
 
