--- a/templates/pages/entreprise.html.twig
+++ b/templates/pages/entreprise.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Animation musicale pour soirée d'entreprise - Musiciens pros
+	Animation musicale pour soirée d'entreprise - Jazz - Chanson
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez une animation musicale pour votre soirée ou cocktail d'entreprise ? Découvrez nos formules !">
+	<meta name="description" content="Vous cherchez une animation musicale pour votre soirée d'entreprise ? Découvrez nos groupes jazz et chanson, formules sur mesure.">
 {% endblock %}
 
 {% block heading %}
