--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Musiciens pour votre soirée privée - Orchestre sur mesure
+	Musiciens pour votre soirée privée - Jazz - Chanson
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez des musiciens pour animer votre mariage, soirée, cocktail ? Jazz manouche, chanson, ... déplacements dans toute la France !">
+	<meta name="description" content="Vous cherchez des musiciens pour animer votre soirée, cocktail, mariage ? Découvrez nos groupes de musique jazz et chanson !">
 {% endblock %}
 
 {% block heading %}
