tente de remonter musiciens soiree

--- a/templates/pages/entreprise.html.twig
+++ b/templates/pages/entreprise.html.twig
@@ -65,7 +65,7 @@ drift.load('beeybihz4kn4');
                     </p>
 
                     <p>
-                        Nous vous proposons des formules sur mesure pour l'<strong>animation musicale</strong> de votre soirée d'entreprise. Nous sommes là pour vous accompagner, et vous guider de A à Z. Non seulement, nous vous proposons un <strong>orchestre professionnel</strong>, mais nous sommes également présents pour vous <strong>conseiller</strong>. Notre expérience en tant que prestataire événementiel nous permet de vous orienter au mieux sur la partie <strong>animation musicale</strong>, et de vous garantir une soirée exceptionnelle !
+                        Nous vous proposons des formules sur mesure pour l'<strong>animation musicale</strong> de votre soirée d'entreprise. Nous sommes là pour vous accompagner, et vous guider de A à Z. Non seulement, nous vous proposons un <a href="{{ path('musiciens_soirees') }}" style="color: #555555;"><b>orchestre professionnel</b> pour votre soirée</a>, mais nous sommes également présents pour vous <strong>conseiller</strong>. Notre expérience en tant que prestataire événementiel nous permet de vous orienter au mieux sur la partie <strong>animation musicale</strong>, et de vous garantir une soirée exceptionnelle !
                     </p>
 				</div>
 
