--- a/templates/pages/guinguette.html.twig
+++ b/templates/pages/guinguette.html.twig
@@ -58,6 +58,10 @@
 				<!-- /.col-sm-4 -->
 			</div>
 
+			<p>
+				Pour d'autres formations, je vous invite à consulter la page dédiée à notre <a href="{{ path('musiciens_soirees') }}">groupe de musique pour soirée</a>.
+			</p>
+
             <h2 style="margin-top: 15px;" class="section-title section-title--small">Quelques extraits d'accordéon guinguette</h2>
 
             <div class="row">
