--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -194,7 +194,7 @@
 					</p>
 
 					<p class="txt--blank">
-						Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple (voir aussi l'ensemble de nos <a href="{{ path('musiciens_soirees') }}" style="color: #ffffff;">musiciens pour vos soirées</a>).
+						Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple (voir aussi l'ensemble de nos <a href="{{ path('musiciens_soirees') }}" style="color: #ffffff;">groupes de musique pour vos soirées</a>).
 					</p>
 
 					<p>
