--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -163,6 +163,17 @@ drift.load('beeybihz4kn4');
 			<p>
 				Je travaille également avec de nombreux musiciens professionnels, qui peuvent vous proposer d'autres styles musicaux : groupe de <strong>soul / funk</strong>, ambiance <strong>pop / folk</strong>, jazz plus traditionnel... Ces différents groupes de musique sauront s'adapter à <strong>tout type de soirée</strong>, n'hésitez pas à m'envoyer un message pour vous guider dans vos recherches !
 			</p>
+
+			<h2 id="reviews" class="section-title section-title--small">Ils nous ont fait confiance</h2>
+
+			{% include 'partners.html.twig' %}
+
+			<hr>
+
+			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews"></div>
+
+			<hr style="background-color: #2d2d2d; margin: 25px 0;">
         </div>
 		<!-- /.container -->
 	</section>
