--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -115,7 +115,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/od3lmo26AaE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 
@@ -127,7 +127,7 @@
 			</div>
 
 			<p>
-				<a class="btn btn-primary" href="{{ path('accordeoniste_soiree') }}">Plus d'informations</a>
+				<a class="btn btn-primary" href="{{ path('accordeoniste_soiree') }}" style="margin-top: 10px;">Plus d'informations</a>
 			</p>
 
 			<h2 class="section-title section-title--small" style="margin-top: 20px;">Le groupe de jazz manouche</h2>
@@ -260,15 +260,7 @@
 
 			<h2 class="section-title section-title--small">Ils nous ont fait confiance</h2>
 
-			<div class="partners">
-				<img src="{{ asset('img/vinci.png') }}" alt="Vinci" style="max-height: 100px; margin-right: 25px;">
-				<img src="{{ asset('img/audiens.png') }}" alt="Audiens" style="max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/lebarn.svg') }}" alt="Hôtel Le Barn" style="max-width: 100px; max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/terremer.png') }}" alt="Restaurant Terre & Mer" style="max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/greatweddings.jpeg') }}" alt="Great Weddings in France" style="max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/bistrochamps.png') }}" alt="Le Bistro des Champs" style="max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/lamarlotte.png') }}" alt="La Marlotte" style="max-height: 60px; margin-right: 25px;">
-			</div>
+			{% include 'partners.html.twig' %}
 
 			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews"></div>
 
