--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Accordéoniste pour l'animation de votre soirée ou événement{% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous êtes à la recherche d'un accordéoniste pour animer votre soirée (mariage, fête, anniversaire..) ? Découvrez les formules jazz et chanson française !">
+	<meta name="description" content="Vous êtes à la recherche d'un accordéoniste pour animer votre soirée ? Seul ou en groupe, découvrez mes formules sur mesure.">
 {% endblock %}
 
 {% block heading %}
@@ -236,7 +236,7 @@ drift.load('beeybihz4kn4');
 
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2ikPP4jTAfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/od3lmo26AaE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -321,17 +321,7 @@ drift.load('beeybihz4kn4');
 
 			<h2 class="section-title section-title--small" style="margin-top: 25px;">Ils m'ont fait confiance</h2>
 
-			<div class="partners">
-				<img src="{{ asset('img/vinci.png') }}" alt="Vinci" style="max-height: 100px; margin-right: 25px;">
-				<img src="{{ asset('img/audiens.png') }}" alt="Audiens" style="max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/lebarn.svg') }}" alt="Hôtel Le Barn" style="max-width: 100px; max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/terremer.png') }}" alt="Restaurant Terre & Mer" style="max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/greatweddings.jpeg') }}" alt="Great Weddings in France" style="max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/bistrochamps.png') }}" alt="Le Bistro des Champs" style="max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/lamarlotte.png') }}" alt="La Marlotte" style="max-height: 60px; margin-right: 25px;">
-				<img src="{{ asset('img/venteprivee.png') }}" alt="vente-privee.com" style="max-height: 100px; margin-right: 25px;">
-				<img src="{{ asset('img/crillonlogo.png') }}" alt="Hôtel Le Crillon" style="max-height: 60px; margin-right: 25px;">
-			</div>
+			{% include 'partners.html.twig' %}
 
 			<hr>
 
