--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -25,6 +25,10 @@
 			<h1 class="section-title">Événementiel et animations musicales</h1>
 
 			<p>
+				<a href="{{ path('contact') }}" class="btn btn-primary">Parlez moi de votre projet : dutheil.jeremy@gmail.com / 06.85.38.22.16</a>
+			</p>
+
+			<p>
 				Accordéoniste professionnel, Jérémy Dutheil vous propose des formules sur mesures pour <strong>l'animation musicale</strong> de votre  événement : cocktail, fête, vin d'honneur, <a href="{{ path('entreprise') }}">soirée d'entreprise</a>. Seul ou accompagné d'autres <strong>musiciens</strong>, dans un style plutôt moderne ou <strong>rétro</strong>, il saura combler vos invités en s'adaptant à leurs envies (et les votres !). Musicien professionnel avec de l'expérience, le répertoire proposé est varié et personnalisé pour votre événement. Jérémy évolue plus particulièrement dans les styles musicaux <strong>jazz</strong> (manouche) et <strong>chanson française</strong>.
 			</p>
 
@@ -365,6 +369,10 @@
 
 
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
+			<p>
+				<a href="{{ path('contact') }}" class="btn btn-primary">Parlez moi de votre projet : dutheil.jeremy@gmail.com / 06.85.38.22.16</a>
+			</p>
 
 		</div>
 		<!-- /.container -->
