--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -135,7 +135,7 @@
                         </li>
 
                         <li class="nav-item px-2 py-1">
-                            <a class="nav-link {% if app.request.attributes.get('_route') == 'agenda' %}nav-link--active{% endif %}" href="{{ path('agenda') }}">Agenda</a>
+                    <a class="nav-link {% if app.request.attributes.get('_route') == 'agenda' %}nav-link--active{% endif %}" href="{{ path('agenda') }}">Concerts</a>
                         </li>
 
                         <li class="nav-item px-2 py-1">
@@ -145,7 +145,7 @@
                         <li class="nav-item px-2 py-1">
                             <a class="nav-link {% if route == 'animations' %}nav-link--active{% endif %}"
                                 href="{{ path('animations') }}" title="Trouver un musicien ou groupe de musique pour votre soirée (mariage, cocktail, événement)">
-                                Vos événements
+                                Prestations
                             </a>
                         </li>
 
