--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -75,7 +75,10 @@ drift.load('beeybihz4kn4');
 					<img class="img-fluid" src="img/accordeoniste_soiree.JPG" alt="Accordéoniste pour vos soirées">
 
 					<p style="margin-top: 15px;">
-						<a href="{{ path('contact') }}" class="btn btn-primary">Une question ? Un devis ? Contactez-moi !</a>
+						<a href="{{ path('contact') }}" class="btn btn-primary">
+							Une question ? Un devis ? Contactez-moi ! <br>
+							dutheil.jeremy@gmail.com / 06.85.38.22.16
+						</a>
 					</p>
 				</div>
 			</div>
@@ -358,7 +361,7 @@ drift.load('beeybihz4kn4');
 			</p>
 
 			<p>
-				<a href="{{ path('contact') }}" class="btn btn-primary">Parlez moi de votre propre projet !</a>
+				<a href="{{ path('contact') }}" class="btn btn-primary">Parlez moi de votre projet : dutheil.jeremy@gmail.com / 06.85.38.22.16</a>
 			</p>
 		</div>
 	</section>
