--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -57,6 +57,10 @@ drift.load('beeybihz4kn4');
 			<div class="row">
 				<div class="col-md-12">
 					<p>Ça y est, la date de votre soirée est définie, les invitations sont prêtes à être envoyées, et pour rendre ce moment vraiment exceptionnel vous cherchez maintenant des <strong>musiciens professionnels</strong> qui pourront s'occuper de l'animation musicale de votre événement. Qu'il s'agisse du vin d'honneur de votre mariage, d'un repas d'anniversaire, d'un cocktail pour une soirée d'entreprise ou d'une soirée privée... Toutes les occasions sont bonnes pour profiter d'un <strong>groupe de musique pour votre soirée</strong> en live, plutôt qu'une simple playlist ! De l'orchestre de jazz au duo intimiste, des musiciens professionnels seront un réel atout pour votre soirée. </p>
+
+					<p>
+						<a href="{{ path('contact') }}" class="btn btn-primary">Parlez moi de votre projet : dutheil.jeremy@gmail.com / 06.85.38.22.16</a>
+					</p>
 				</div>
 			</div>
 
