--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -22,13 +22,14 @@
 			<h1 class="section-title">Vidéos</h1>
 
 			<p>
-				Découvrez mon répertoire en solo, ou au sein de mes différents projets, avec quelque vidéos ci-dessous ; l'ensemble de mes vidéos en ligne est disponible sur <a href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw">ma page Youtube</a>.
+				Découvrez mon répertoire en solo, ou au sein de mes différents projets, avec quelque vidéos ci-dessous ; l'ensemble de mes vidéos en ligne est disponible sur <a href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank">ma page Youtube</a>.
 			</p>
 
-			<h2 class="section-title section-title--small">Duo accordéon / guitare</h2>
+			<h2 class="section-title section-title--small">Jérémy Dutheil & Solal Poux : duo jazz manouche accordéon / guitare</h2>
 
 			<p>
-				En duo avec l'excellent guitariste Solal Poux, nous proposons des concerts et animations musicales autour du jazz (plus particulièrement jazz manouche) ; la formule duo est facile à mettre en place, et convient très bien aux budgets les plus modestes.
+				En duo avec l'excellent guitariste Solal Poux, nous proposons un répertoire axé principalement sur le <strong>jazz manouche</strong> ; les compositions de Django Reinhardt sont mises en avant, même si on retrouve également des morceaux issu du répertoire jazz plus traditionnel. <br>
+				Nous sommes <strong>en tournée en 2020</strong>, et vous pouvez découvrir toutes les dates de concert dans la section dédiée. Nous nous produisons également pour des événements privés (entreprise ou particulier) en région parisienne.
 			</p>
 
 
@@ -112,44 +113,33 @@
             <div class="row">
                 <div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/od3lmo26AaE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-
-					<p class="text-center" style="margin-top: 15px;">
-						<i>Carnevale</i> est un morceau récent, écrit par l'accordéoniste jazz <strong>Renzo Ruggieri</strong> ; pièce devenue culte dans le milieu de l'accordéon, elle est notamment très jouée dans les concours internationaux.
-						<br><a href="https://www.youtube.com/watch?v=mv3DgoYPCds" target="_blank">https://www.youtube.com/watch?v=mv3DgoYPCds</a>
-					</p>
 				</div>
 
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-
-					<p class="text-center" style="margin-top: 15px;">
-						<i>Ain't Misbehavin</i> est un morceau de 1929, écrit par Fats Waller et Harry Brooks, popularisée notamment par <strong>Louis Armstrong</strong> ; ici jouée à la manière de <strong>Frank Marocco</strong>, célèbre accordéoniste jazz.
-						<br><a href="https://www.youtube.com/watch?v=mv3DgoYPCds" target="_blank">https://www.youtube.com/watch?v=mv3DgoYPCds</a>
-					</p>
 				</div>
             </div>
 
-            <div class="row">
-				
-
-                <div class="col-md-6">
+            <div class="row" style="margin-top: 20px;">
+				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2ikPP4jTAfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CjtwtX3Sd8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
+				</div>
 
-					<p class="text-center" style="margin-top: 15px;">
-						Est-il encore nécessaire de présenter <strong>Jo Privat</strong> ? Accordéoniste des années 40, il sera celui qui réunit le musette et le jazz manouche ; je vous propose ici l'une de ses (nombreuses) valses swing, <i>Sa Préférée</i>.
-						<br><a href="https://www.youtube.com/watch?v=2ikPP4jTAfE" target="_blank">https://www.youtube.com/watch?v=2ikPP4jTAfE</a>
-					</p>
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
             </div>
 
-			<p>
-				<a class="btn btn-primary" href="{{ path('animations') }}">Plus d'informations <span class="d-none d-md-inline">sur la formule en solo</span></a>
+			<p style="margin-top: 20px;">
+				<a class="btn btn-primary" href="{{ path('accordeoniste_soiree') }}">Plus d'informations <span class="d-none d-md-inline">sur la formule en solo</span></a>
 			</p>
 
 			<h2 class="section-title section-title--small">Duos accordéon / voix</h2>
