--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -194,13 +194,13 @@
                     <a title="Retrouvez moi sur Facebook" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank" ><i class="fab fa-facebook"></i></a>
                     <a title="Retrouvez moi sur Youtube" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
                     <a title="Retrouvez moi sur Soundcloud" style="font-size: 24px; color: #FFFFFF;" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
-                    <a title="Retrouvez moi sur LiveTonight" style="" href="https://livetonight-dot-yamm-track.appspot.com/Redirect?ukey=1nGcsuKOZ27OLxDe8NWFrLO7Wfs4w5z_JPHRm1X_ZDB8-993220127&key=YAMMID-22322822&link=https%3A%2F%2Fwww.livetonight.fr%2Fgroupe-musique-dj%2F3484-jeremy-dutheil" target="_blank"><img style="height: 20px; vertical-align: -2px; margin-left: 10px;" src="img/livetonight.png"></a>
+                    <!--<a title="Retrouvez moi sur LiveTonight" style="" href="https://livetonight-dot-yamm-track.appspot.com/Redirect?ukey=1nGcsuKOZ27OLxDe8NWFrLO7Wfs4w5z_JPHRm1X_ZDB8-993220127&key=YAMMID-22322822&link=https%3A%2F%2Fwww.livetonight.fr%2Fgroupe-musique-dj%2F3484-jeremy-dutheil" target="_blank"><img style="height: 20px; vertical-align: -2px; margin-left: 10px;" src="img/livetonight.png"></a>-->
                 </p>
 
                 <hr style="background-color: #ffffff;">
 
                 <p class="text-center" style="font-size: 14px; ">
-                    <a style="color: #FFFFFF;" href="{{ path('mentions_legales') }}">Mentions légales</a> - <a href="{{ path('accordeoniste_soiree') }}" style="color: #ffffff;">Accordéoniste pour votre soirée</a> - <a href="{{ path('musiciens_soirees') }}" style="color: #ffffff;">Groupe de musique pour votre soirée</a>
+                    <a style="color: #FFFFFF;" href="{{ path('mentions_legales') }}">Mentions légales</a> <!-- - <a href="{{ path('accordeoniste_soiree') }}" style="color: #ffffff;">Accordéoniste pour votre soirée</a> - <a href="{{ path('musiciens_soirees') }}" style="color: #ffffff;">Groupe de musique pour votre soirée</a> -->
                 </p>
             </div>
         </section>
