--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -83,7 +83,7 @@
 						</p>
 
 						<p>
-							Même s'il est accordéoniste à Paris, Jérémy se produit sur scène dans toute la France, seul ou en groupe.
+							Même s'il est accordéoniste à Paris, Jérémy se produit sur scène dans toute la France, seul ou en groupe, notamment avec son <a style="color: #555555;" href="{{ path('manouche') }}">groupe de jazz manouche</a> : <a href="{{ path('jdsp') }}">Jérémy Dutheil & Solal Poux</a>.
 						</p>
 
 						<p>
