--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -66,7 +66,7 @@ drift.load('beeybihz4kn4');
 			</p>
 
 			<p>
-				Nous nous produisons aussi bien lors de concerts en public, que lors d'<strong>événements d'entreprise et soirées privées</strong>. Vous trouverez sur cette page de nombreuses vidéos de notre groupe jazz manouche, ainsi que <a href="#reviews">des avis</a> qui décrivent la qualité de nos animations musicales.
+				Nous nous produisons aussi bien lors de concerts en public (voir notre page <a href="{{ path('jdsp') }}">Jérémy Dutheil & Solal Poux</a>), que lors d'<strong>événements d'entreprise et soirées privées</strong>. Vous trouverez sur cette page de nombreuses vidéos de notre groupe jazz manouche, ainsi que <a href="#reviews">des avis</a> qui décrivent la qualité de nos animations musicales.
 			</p>
 
 			<!--<div class="row">
